--- a/nvim/dein/toml/dein.toml
+++ b/nvim/dein/toml/dein.toml
@@ -3,7 +3,16 @@
 repo = 'Shougo/dein.vim'
 
 [[plugins]]
+repo = 'Shougo/neosnippet.vim'
+
+[[plugins]]
+repo = 'Shougo/neosnippet-snippets'
+
+[[plugins]]
 repo = 'thinca/vim-quickrun'
+
+[[plugins]]
+repo = 'Shougo/neosnippet-snippets'
 
 [[plugins]]
 repo = 'ajmwagar/vim-deus'
